integrating venue attendance

--- a/client/app/app.view.html
+++ b/client/app/app.view.html
@@ -61,6 +61,9 @@
       <button (click)="checkLoggedIn()" class="btn btn-secondary btn-sm">
         Test: {{_auth.authStatus}}
       </button>
+      <button (click)="getAttendance()" class="btn btn-secondary btn-sm">
+        API
+      </button>
     </div>
   </div>
 </div>
