--- a/client/app/app.view.html
+++ b/client/app/app.view.html
@@ -61,7 +61,7 @@
       <button (click)="checkLoggedIn()" class="btn btn-secondary btn-sm">
         Test: {{_auth.authStatus}}
       </button>
-      <button (click)="getAttendance()" class="btn btn-secondary btn-sm">
+      <button (click)="getVenues()" class="btn btn-secondary btn-sm">
         API
       </button>
     </div>
