added real-time update logic

--- a/client/app/search/search.view.html
+++ b/client/app/search/search.view.html
@@ -32,7 +32,7 @@
                 (click)="sendGoing(brick.id)">
                 I'm Going
               </button>
-              <button class="btn btn-secondary btn-going" *ngIf="brick.attending" 
+              <button class="btn btn-secondary btn-danger btn-going" *ngIf="brick.attending" 
                 (click)="sendNotGoing(brick.id)">
                 I'm Not Going
               </button>
