--- a/client/app/app.view.html
+++ b/client/app/app.view.html
@@ -7,7 +7,7 @@
         </a>
       </div>
       <div class="col-sm text-right" *ngIf="activeRoute == '/nl'">
-        <button class="btn btn-secondary btn-about">
+        <button class="btn btn-secondary btn-about"  (click)="open(content)">
           &nbsp; About &nbsp;
         </button>
       </div>
@@ -75,3 +75,18 @@
   </p>
   <p>FreeCodeCamp &nbsp; | &nbsp; <i class="zmdi zmdi-github-alt"></i> &nbsp; <a href="https://github.com/cjsheets">Chad Sheets</a></p>
 </footer>
+
+<template #content let-c="close" let-d="dismiss" ngbModalContainer>
+  <div class="modal-header">
+    <h5 class="modal-title">Angular Voting - Login</h5>
+    <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+The Body
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-md btn-outline-secondary" (click)="c('Close click')">Cancel</button>
+  </div>
+</template>
